tests/ui/nested_module.stderr
error: #[decycle] is not supported in nested modules
 --> tests/ui/nested_module.rs:3:5
  |
3 |     #[decycle::decycle]
  |     ^^^^^^^^^^^^^^^^^^^
